syntax = "proto3";
package lavanet.lava.pairing;

import "gogoproto/gogo.proto";
import "lavanet/lava/pairing/params.proto";
import "lavanet/lava/pairing/epoch_cu.proto";
import "lavanet/lava/fixationstore/fixation.proto";
import "lavanet/lava/timerstore/timer.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/v3/x/pairing/types";

message BadgeUsedCu {
  bytes badge_used_cu_key = 1; 
  uint64 used_cu = 2; 
}

// GenesisState defines the pairing module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  reserved 2;
  reserved 3;
  reserved 4;
  repeated BadgeUsedCu badgeUsedCuList = 5 [(gogoproto.nullable) = false];
  lavanet.lava.timerstore.GenesisState badgesTS = 6 [(gogoproto.nullable) = false];
  lavanet.lava.fixationstore.GenesisState providerQosFS = 7 [(gogoproto.nullable) = false];
  repeated UniqueEpochSessionGenesis unique_epoch_sessions = 8 [(gogoproto.nullable) = false];
  repeated ProviderEpochCuGenesis provider_epoch_cus = 9 [(gogoproto.nullable) = false];
  repeated ProviderEpochComplainerCuGenesis provider_epoch_complained_cus = 10 [(gogoproto.nullable) = false];
  repeated ProviderConsumerEpochCuGenesis provider_consumer_epoch_cus = 11 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}

message UniqueEpochSessionGenesis {
  uint64 epoch = 1;
  string provider = 2;
  string project = 3;
  string chain_id = 4;
  uint64 session_id = 5;
}

message ProviderEpochCuGenesis {
  uint64 epoch = 1;
  string provider = 2;
  string chain_id = 3;
  ProviderEpochCu provider_epoch_cu = 4 [(gogoproto.nullable) = false];
}

message ProviderEpochComplainerCuGenesis {
  uint64 epoch = 1;
  string provider = 2;
  string chain_id = 3;
  ProviderEpochComplainerCu provider_epoch_complainer_cu = 4 [(gogoproto.nullable) = false];
}

message ProviderConsumerEpochCuGenesis {
  uint64 epoch = 1;
  string provider = 2;
  string project = 3;
  string chain_id = 4;
  ProviderConsumerEpochCu provider_consumer_epoch_cu = 5 [(gogoproto.nullable) = false];
}